@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.4.2</version>
+        <version>2.5.3</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -36,7 +36,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>15</java.version>
+        <java.version>16</java.version>
 
         <!-- Melosys -->
         <melosys.jsonschema.version>1.35.132-10bbcd9f464dd7c5c196323256ab0f5ef6026c4f</melosys.jsonschema.version>
@@ -49,13 +49,13 @@
         <behandlingstatus.version>1.1.0</behandlingstatus.version>
         <doksys.dokumentproduksjon.version>3.3.4</doksys.dokumentproduksjon.version>
         <joark.journalfoerinngaaende.version>0.0.21</joark.journalfoerinngaaende.version>
-        <token-support.version>1.3.7</token-support.version>
+        <token-support.version>1.3.8</token-support.version>
 
         <!-- Versjoner av eksterne biblioteker -->
         <archunit.version>0.19.0</archunit.version>
         <apache-httpclients.version>4.5.13</apache-httpclients.version>
         <caffeine.version>3.0.2</caffeine.version>
-        <cxf.version>3.4.3</cxf.version>
+        <cxf.version>3.4.4</cxf.version>
         <commons-collections4.version>4.4</commons-collections4.version>
         <commons-lang.version>3.9</commons-lang.version>
         <commons-text.version>1.8</commons-text.version>
@@ -92,10 +92,10 @@
         <javassist.version>3.27.0-GA</javassist.version>
         <jaxb2-basics-runtime.version>0.12.0</jaxb2-basics-runtime.version>
         <joda-time.version>2.10.10</joda-time.version>
-        <objenesis.version>3.1</objenesis.version>
+        <objenesis.version>3.2</objenesis.version>
         <stax2-api.version>4.2.1</stax2-api.version>
         <woodstox.version>6.2.3</woodstox.version>
-        <xmlsec.version>2.1.4</xmlsec.version>
+        <xmlsec.version>2.2.2</xmlsec.version>
         <medlemskapsunntak-api-v1.version>1.1</medlemskapsunntak-api-v1.version>
         <wiremock-standalone.version>2.27.2</wiremock-standalone.version>
     </properties>
@@ -604,7 +604,6 @@
                     <configuration>
                         <release>${java.version}</release>
                         <encoding>UTF-8</encoding>
-                        <compilerArgs>--enable-preview</compilerArgs>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -636,13 +635,13 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${maven-surefire-plugin.version}</version>
                     <configuration>
-                        <argLine>-Xms256m -Dfile.encoding=UTF-8 --enable-preview</argLine>
+                        <argLine>-Xms256m -Dfile.encoding=UTF-8</argLine>
                     </configuration>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-dependency-plugin</artifactId>
-                    <version>3.1.2</version>
+                    <version>${maven-dependency-plugin.version}</version>
                 </plugin>
                 <plugin>
                     <artifactId>maven-failsafe-plugin</artifactId>
